# Office-tools

./: .gitignore
docx-toolbox/: CHANGELOG.md  CORE-INTERFACE.md  README.md  pyproject.toml  requirements.txt
docx-toolbox/core/: README.md  __init__.py  api.py
docx-toolbox/core/adapters/: __init__.py  excel_allinone.py  image_extract.py  table_extract.py
docx-toolbox/core/errors/: __init__.py
docx-toolbox/core/logging_utils/: __init__.py
docx-toolbox/core/runner/: __init__.py
docx-toolbox/flet/app/: __init__.py  main.py
docx-toolbox/flet/app/config/: settings.py  theme.py
docx-toolbox/flet/app/core/: __init__.py  adapter.py
docx-toolbox/flet/app/runner/: __init__.py  worker.py
docx-toolbox/flet/app/state/: __init__.py  app_state.py
docx-toolbox/flet/app/ui/: __init__.py  app_layout.py
docx-toolbox/pyqt6/app/: __init__.py  main.py
docx-toolbox/pyqt6/app/config/: settings.py  theme.py
docx-toolbox/pyqt6/app/core/: __init__.py  adapter.py
docx-toolbox/pyqt6/app/models/: task_model.py
docx-toolbox/pyqt6/app/runner/: __init__.py  worker.py
docx-toolbox/pyqt6/app/ui/: __init__.py  (+1 more)
docx-toolbox/pyside6/: __init__.py
docx-toolbox/pyside6/app/: __init__.py  main.py
docx-toolbox/pywebview/backend/: __init__.py  api.py  app.py
docx-toolbox/pywebview/frontend/: index.html  package-lock.json  package.json
docx-toolbox/references/: DOCX图片分离.py  DOCX表格提取.py  README.md  docx-allinone.py
docx-toolbox/scripts/: package_app.py
docx-toolbox/tests/: test_core.py
docx-toolbox/tk/: __init__.py
docx-toolbox/tk/app/: __init__.py  main.py
(+78 files in other folders)
