[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docx-toolbox"
version = "0.1.0"
description = "统一文档工具箱 — DOCX 嵌入式 Excel 处理、图片分离、表格提取"
requires-python = ">=3.10"
dependencies = [
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "Pillow>=10.0.0",
    "matplotlib>=3.8.0",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
pyside6 = ["PySide6>=6.6.0"]
flet = ["flet>=0.81.0"]
pywebview = ["pywebview>=5.0.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pyinstaller>=6.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
